<resources>
    <string name="app_name">Bestdori 卡面下载器</string>
    <string name="choose_hint">选择卡面：</string>
    <string name="worklist_hint">任务列表</string>
    <string name="type_id_hint">你可以手动输入卡面ID，卡面ID按照Bestdori网站显示为基准：</string>
    <string name="batch_hint">你可以选择某些选项（例如选择青叶摩卡的所有五星卡面）来批量下载：</string>
    <string name="choose_from_webkit_hint">你也可以浏览Bestdori网页，在对应卡面页面点击画面右下角的浮动按钮添加到任务列表：</string>
    <string name="checkbox_if_realesrgan">使用Real-ESRGAN算法四倍超分</string>
    <string name="button_add">添加</string>
    <string name="button_batch_add">批量添加</string>
    <string name="button_explore_bestdori">浏览Bestdori</string>
    <string name="button_cancel">取消</string>
    <string name="button_confirm_add">添加</string>
    <string name="button_start">开始下载</string>
    <string name="button_Choose_all_or_reverse">全选/全不选</string>
    <string name="tv_cardid">卡面编号：</string>
    <string name="tv_select_server">选择服务器：</string>
    <string name="tv_select_server_attention">选择服务器：\n注意，本程序不会探测目前Bestdori的服务器地区设置，因此请确保你选择了正确的服务器地区。</string>
    <string name="tv_select_training">选择特训类型：</string>
    <string name="tv_warning_realesrgan">当前下载的照片会使用Real-ESRGAN算法进行超分。\n超分执行时，会占用大量的GPU资源，会导致设备运行明显卡顿。\n一张照片的下载时间很可能会达到一分钟，请耐心等待，并保持屏幕开启，程序前台运行。</string>
    <string name="tv_saveto">图片已保存至DCIM/BestdoriCardDownload/目录。</string>
    <string name="tv_loading_from_bestdori">正在从Bestdori获取卡面索引……</string>

    <string name="tv_log_startdownloading">正在下载卡面，第%d张，共%d张……\n</string>
    <string name="tv_log_downloadover">第%d张卡面下载完成。\n</string>

    <string name="alert_choose_card">请选择一张卡面</string>
    <string name="alert_not_valid_card">当前页面不是一张有效的卡面页面。请点击进入一张卡面的详细信息。</string>
    <string name="alert_realesrgan_title">Real-ESRGAN提示</string>
    <string name="alert_realesrgan">Real-ESRGAN是一种AI超分算法。在本程序中，该算法的实现依赖于Vulkan接口。\n\n在本程序中，使用AI超分会将下载自Bestdori的图片进行四倍超分，超分后的图片分辨率为5336*4008，并会在文件名后加以Real_ESRGAN_Anime_4x的后缀。\n\n请注意，该算法对手机GPU的要求比较高。Snapdragon 8 Gen2、Snapdragon 8 Gen3以及Snapdragon 8s Gen3是通过我自己测试可用的处理器。Snapdragon 865超分之后的图片可能出现损坏。联发科处理器、海思处理器、玄戒处理器、瑞芯微处理器等其他品牌处理器均未经过测试。\n\n请根据自己手机的性能量力而行。</string>
    <string name="toast_nocard">请先向任务队列内添加卡面。通过手动或浏览Bestdori方式添加卡面。</string>
</resources>