<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/button_start_jobs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:layout_marginBottom="10sp"
            android:text="@string/choose_hint"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_id_hint" />


        <Button
            android:id="@+id/button_add_card_manually"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"

            android:text="@string/button_add" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_from_webkit_hint" />

        <Button
            android:id="@+id/button_explore_bestdori"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/button_explore_bestdori" />

        <CheckBox
            android:id="@+id/checkBox_if_realesrgan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_if_realesrgan" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:text="@string/worklist_hint"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ListView
            android:id="@+id/lv_worklist"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp" />


    </LinearLayout>

    <Button
        android:id="@+id/button_start_jobs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:text="@string/button_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</LinearLayout>